k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: hana-securities
  labels:
    app: hana-securities
